--- a/PoketBuddy/app/src/main/res/layout/activity_remove_friend.xml
+++ b/PoketBuddy/app/src/main/res/layout/activity_remove_friend.xml
@@ -6,33 +6,176 @@
     android:layout_height="match_parent"
     tools:context=".RemoveFriend"
     android:background="#fff">
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/header"
+        android:orientation="horizontal">
+        <ImageButton
+            android:id="@+id/menubtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:background="#00ffffff"
+            android:scaleType="centerInside"
+            android:src="@drawable/hamburger"
+            android:layout_marginLeft="10dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <ImageButton
+            android:id="@+id/homebtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="#00ffffff"
+            android:scaleType="centerInside"
+            android:src="@drawable/home"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            />
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="REMOVE"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
-    <EditText
-        android:id="@+id/nametxt"
-        android:layout_width="wrap_content"
+        android:layout_below="@id/header"
+        android:id="@+id/contentView"
+        android:paddingBottom="30dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="REMOVE"
+            android:id="@+id/removetxt"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+        <EditText
+            android:id="@+id/nametxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:ems="10"
+            android:inputType="text"
+            android:layout_below="@id/removetxt"
+            android:layout_marginBottom="10dp"/>
+        <Button
+            android:id="@+id/findbtn"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_below="@+id/nametxt"
+            android:layout_centerHorizontal="true"
+            android:background="@layout/txtedit_border"
+            android:text="SEARCH"
+            android:textColor="#fff"
+            android:textSize="15dp" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:layout_marginTop="59dp"
-        android:inputType="text" />
-    <Button
-        android:id="@+id/findbtn"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        android:layout_below="@+id/nametxt"
-        android:layout_centerHorizontal="true"
-        android:background="@layout/txtedit_border"
-        android:text="SEARCH"
-        android:textColor="#fff"
-        android:textSize="15dp" />
-    <EditText
+        android:layout_below="@id/contentView">
+        <EditText
+            android:id="@+id/fName"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:background="@layout/txtedit_border"
+            android:hint="Name"
+            android:inputType="text"
+            android:paddingLeft="20dp"
+            android:textColor="#fff"
+            android:textColorHint="#aaa"
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"
+            />
+
+        <EditText
+            android:id="@+id/phone"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:background="@layout/txtedit_border"
+            android:hint="Phone"
+            android:inputType="text"
+            android:paddingLeft="20dp"
+            android:textColor="#fff"
+            android:textColorHint="#aaa"
+            android:textSize="15dp"
+            android:layout_below="@id/fName"
+            android:layout_marginBottom="10dp"/>
+
+        <EditText
+            android:id="@+id/gender"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/phone"
+            android:background="@layout/txtedit_border"
+            android:hint="Gender"
+            android:inputType="text"
+            android:paddingLeft="20dp"
+            android:textColor="#fff"
+            android:textColorHint="#aaa"
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
+
+        <EditText
+            android:id="@+id/qlf"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/gender"
+            android:background="@layout/txtedit_border"
+            android:hint="Qualification"
+            android:layout_centerHorizontal="true"
+            android:inputType="text"
+            android:paddingLeft="20dp"
+            android:textColor="#fff"
+            android:textColorHint="#aaa"
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
+
+        <EditText
+            android:id="@+id/address"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/qlf"
+            android:background="@layout/txtedit_border"
+            android:hint="Address"
+            android:inputType="text"
+            android:paddingLeft="20dp"
+            android:textColor="#fff"
+            android:textColorHint="#aaa"
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
+
+        <EditText
+            android:id="@+id/pf"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/address"
+            android:background="@layout/txtedit_border"
+            android:hint="Profession"
+            android:inputType="text"
+            android:paddingLeft="20dp"
+            android:textColor="#fff"
+            android:textColorHint="#aaa"
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
+
+        <Button
+            android:id="@+id/deletebtn"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/adbtn"
+            android:background="@layout/cancelbtn_border"
+            android:text="DELETE"
+            android:textAlignment="center"
+            android:textColor="#ff0000"
+            android:textSize="15dp" />
+    </RelativeLayout>
+    <!--<EditText
         android:id="@+id/rname"
         android:layout_width="250dp"
         android:layout_height="30dp"
@@ -126,6 +269,6 @@
         android:background="@layout/cancelbtn_border"
         android:text="DELETE"
         android:textColor="#ff0000"
-        android:textSize="15dp" />
+        android:textSize="15dp" />-->
 
 </RelativeLayout>
