--- a/PoketBuddy/app/src/main/res/layout/activity_signup.xml
+++ b/PoketBuddy/app/src/main/res/layout/activity_signup.xml
@@ -8,146 +8,143 @@
     android:background="#fff"
     android:theme="@android:style/Theme.NoTitleBar">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="#fff"
-        android:gravity="center">
-
+        android:layout_height="50dp"
+        android:id="@+id/header"
+        >
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
         <ImageButton
             android:id="@+id/homebtn"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="17dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="11dp"
-            android:background="#fff"
+            android:background="#00ffffff"
             android:scaleType="centerInside"
-            android:src="@drawable/home" />
+            android:src="@drawable/home"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="10dp"
+            />
+    </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="76dp"
-            android:text="SIGN UP"
-            android:textAlignment="center"
-            android:textSize="30dp" />
-    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="76dp"
+        android:text="SIGN UP"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:id="@+id/signuptxt"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="398dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="111dp">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/signuptxt"
+        android:paddingTop="30dp">
 
         <EditText
             android:id="@+id/InputName"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="28dp"
             android:background="@layout/txtedit_border"
             android:inputType="text"
             android:paddingLeft="20dp"
             android:hint="Full Name"
             android:textColorHint="#aaa"
             android:textColor="#fff"
-            android:textSize="15dp" />
+            android:textSize="15sp"
+            android:layout_marginBottom="20dp"/>
 
         <EditText
             android:id="@+id/InputEmail"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="71dp"
+            android:layout_below="@id/InputName"
             android:background="@layout/txtedit_border"
             android:inputType="textEmailAddress"
-            android:paddingLeft="20dp"
+            android:paddingStart="20dp"
             android:hint="Email"
             android:textColorHint="#aaa"
             android:textColor="#fff"
-            android:textSize="15dp" />
+            android:textSize="15sp"
+            android:layout_marginBottom="20dp"/>
 
         <EditText
             android:id="@+id/InputContact"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="112dp"
+            android:layout_below="@id/InputEmail"
             android:background="@layout/txtedit_border"
             android:inputType="text"
             android:paddingLeft="20dp"
             android:hint="Contact No."
             android:textColorHint="#aaa"
             android:textColor="#fff"
-            android:textSize="15dp" />
+            android:textSize="15sp"
+            android:layout_marginBottom="20dp"/>
 
         <EditText
             android:id="@+id/InputId"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="153dp"
+            android:layout_below="@id/InputContact"
             android:background="@layout/txtedit_border"
             android:inputType="text"
             android:paddingLeft="20dp"
             android:hint="ID"
             android:textColorHint="#aaa"
             android:textColor="#fff"
-            android:textSize="15dp" />
+            android:textSize="15sp"
+            android:layout_marginBottom="20dp"/>
 
         <EditText
             android:id="@+id/InputPw"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="171dp"
+            android:layout_below="@id/InputId"
             android:background="@layout/txtedit_border"
             android:hint="Password"
             android:inputType="textPassword"
             android:paddingLeft="20dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp" />
+            android:textSize="15sp"
+            android:layout_marginBottom="20dp"/>
 
         <Button
             android:id="@+id/signupbtn"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="129dp"
+            android:layout_below="@id/InputPw"
             android:background="@layout/txtedit_border"
             android:text="SIGN UP"
             android:textAlignment="center"
             android:textColor="#fff"
             android:textSize="15dp"
+            android:layout_marginBottom="20dp"
             />
 
         <Button
             android:id="@+id/cancelbtn"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="88dp"
+            android:layout_below="@id/signupbtn"
             android:background="@layout/cancelbtn_border"
             android:text="CANCEL"
             android:textAlignment="center"
             android:textColor="#ff0000"
-            android:textSize="15dp" />
-
+            android:textSize="15sp" />
     </RelativeLayout>
 </RelativeLayout>
