--- a/PoketBuddy/app/src/main/res/layout/activity_add_friend.xml
+++ b/PoketBuddy/app/src/main/res/layout/activity_add_friend.xml
@@ -44,133 +44,123 @@
         android:layout_centerHorizontal="true"
         android:text="ADD"
         android:textColor="#595957"
-        android:textSize="40dp" />
+        android:textSize="40dp"
+        android:layout_marginBottom="30dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="451dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
-
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="#595957"
-            android:text="+"
-            android:textAlignment="center"
-            android:textColor="#fff"
-            android:textSize="50dp" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/addtxt"
+        android:paddingTop="30dp">
 
         <EditText
             android:id="@+id/fName"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="88dp"
             android:background="@layout/txtedit_border"
             android:hint="Name"
             android:inputType="text"
             android:paddingLeft="20dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
             android:id="@+id/phone"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="127dp"
+            android:layout_below="@id/fName"
             android:background="@layout/txtedit_border"
             android:hint="Phone"
             android:inputType="text"
             android:paddingLeft="20dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
             android:id="@+id/gender"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="170dp"
+            android:layout_below="@id/phone"
             android:background="@layout/txtedit_border"
             android:hint="Gender"
             android:inputType="text"
             android:paddingLeft="20dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
             android:id="@+id/qlf"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/gender"
             android:background="@layout/txtedit_border"
             android:hint="Qualification"
             android:inputType="text"
             android:paddingLeft="20dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
             android:id="@+id/address"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="129dp"
+            android:layout_below="@id/qlf"
             android:background="@layout/txtedit_border"
             android:hint="Address"
             android:inputType="text"
             android:paddingLeft="20dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
             android:id="@+id/pf"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="171dp"
+            android:layout_below="@id/address"
             android:background="@layout/txtedit_border"
             android:hint="Profession"
             android:inputType="text"
             android:paddingLeft="20dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
 
         <Button
             android:id="@+id/adbtn"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="87dp"
+            android:layout_below="@id/pf"
             android:background="@layout/txtedit_border"
             android:text="ADD"
             android:textAlignment="center"
             android:textColor="#fff"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_marginBottom="10dp"/>
 
         <Button
             android:id="@+id/ccbtn"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="46dp"
+            android:layout_below="@id/adbtn"
             android:background="@layout/cancelbtn_border"
             android:text="CANCEL"
             android:textAlignment="center"
