--- a/PoketBuddy/app/src/main/res/layout/activity_find_friend.xml
+++ b/PoketBuddy/app/src/main/res/layout/activity_find_friend.xml
@@ -6,91 +6,180 @@
     android:layout_height="match_parent"
     tools:context=".FindFriend"
     android:background="#fff">
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/header"
+        android:orientation="horizontal">
+        <ImageButton
+            android:id="@+id/menubtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:background="#00ffffff"
+            android:scaleType="centerInside"
+            android:src="@drawable/hamburger"
+            android:layout_marginLeft="10dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <ImageButton
+            android:id="@+id/homebtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="#00ffffff"
+            android:scaleType="centerInside"
+            android:src="@drawable/home"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            />
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="FIND"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
-    <EditText
-        android:id="@+id/nametxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="59dp"
-        android:ems="10"
-        android:inputType="text"
-        android:textAlignment="center"/>
-    <Button
-        android:id="@+id/findbtn"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        android:layout_below="@+id/nametxt"
-        android:layout_centerHorizontal="true"
-        android:background="@layout/txtedit_border"
-        android:text="SEARCH"
-        android:textColor="#fff"
-        android:textSize="15dp" />
-    <TextView
-        android:id="@+id/rname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="143dp"
-        android:ems="10"
-        android:textColor="#595957"
-        android:textSize="20sp"
-        android:textAlignment="center"/>
+        android:layout_below="@id/header"
+        android:id="@+id/searchView">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="FIND"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+        <EditText
+            android:id="@+id/nametxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="59dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:textAlignment="center"/>
+        <Button
+            android:id="@+id/findbtn"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_below="@+id/nametxt"
+            android:layout_centerHorizontal="true"
+            android:background="@layout/txtedit_border"
+            android:text="SEARCH"
+            android:textColor="#fff"
+            android:textSize="15dp" />
+    </RelativeLayout>
 
-    <ImageButton
-        android:id="@+id/callbtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignTop="@+id/rphone"
-        android:layout_toStartOf="@+id/nametxt"
-        android:scaleType="centerInside"
-        android:src="@drawable/call"
-        android:background="#fff"/>
-    <EditText
-        android:id="@+id/rphone"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="138dp"
-        android:ems="10"
-        android:inputType="text" />
+        android:layout_below="@id/searchView">
 
-    <ImageButton
-        android:id="@+id/smsbtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignBottom="@+id/raddress"
-        android:layout_toStartOf="@+id/nametxt"
-        android:background="#fff"
-        android:scaleType="centerInside"
-        android:src="@drawable/sms" />
+        <ImageView
+            android:id="@+id/profilepc"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:background="#00ffffff"
+            android:scaleType="centerInside" />
 
-    <ImageButton
-        android:id="@+id/mapbtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="36dp"
-        android:layout_toStartOf="@+id/nametxt"
-        android:background="#fff"
-        android:scaleType="centerInside"
-        android:src="@drawable/location" />
-    <EditText
-        android:id="@+id/raddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rphone"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="-138dp"
-        android:ems="10"
-        android:inputType="text" />
+        <EditText
+            android:id="@+id/rname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/profilepc"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:ems="10"
+            android:textAlignment="center"
+            android:textColor="#595957"
+            android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/call"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignTop="@+id/rphone"
+            android:layout_marginBottom="10dp"
+            android:layout_toStartOf="@+id/rphone"
+            android:background="#00ffffff"
+            android:scaleType="centerInside"
+            android:src="@drawable/call" />
+
+        <EditText
+            android:id="@+id/rphone"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/rname"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:hint="CALL"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <ImageButton
+            android:id="@+id/sms"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignTop="@+id/rsms"
+            android:layout_below="@id/call"
+            android:layout_marginBottom="10dp"
+            android:layout_toStartOf="@+id/rsms"
+            android:background="#00ffffff"
+            android:scaleType="centerInside"
+            android:src="@drawable/sms" />
+
+        <EditText
+            android:id="@+id/rsms"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/rphone"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:hint="SMS"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <ImageButton
+            android:id="@+id/map"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignTop="@+id/raddress"
+            android:layout_below="@id/sms"
+            android:layout_marginBottom="10dp"
+            android:layout_toStartOf="@+id/raddress"
+            android:background="#00ffffff"
+            android:scaleType="centerInside"
+            android:src="@drawable/location" />
+
+        <EditText
+            android:id="@+id/raddress"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/rsms"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:hint="LOCATION"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+        <!--
+            <TextView
+                android:id="@+id/rphone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/rname"
+                android:ems="10"
+                android:inputType="text"
+                android:layout_marginBottom="10dp"/>
+            <TextView
+                android:id="@+id/raddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/rphone"
+                android:layout_centerHorizontal="true"
+                android:ems="10"
+                android:inputType="text" />-->
+    </RelativeLayout>
+
 </RelativeLayout>
