--- a/PoketBuddy/app/src/main/res/layout/activity_main.xml
+++ b/PoketBuddy/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
             android:layout_height="200dp"
             android:src="@drawable/main_image"
             android:layout_margin="40dp"
+            android:id="@+id/image"
           />
         <TextView
             android:layout_width="wrap_content"
