--- a/PoketBuddy/app/src/main/res/layout/activity_remove_friend.xml
+++ b/PoketBuddy/app/src/main/res/layout/activity_remove_friend.xml
@@ -74,106 +74,107 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/contentView">
         <EditText
-            android:id="@+id/fName"
-            android:layout_width="200dp"
+            android:id="@+id/rname"
+            android:layout_width="250dp"
             android:layout_height="30dp"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
             android:background="@layout/txtedit_border"
             android:hint="Name"
             android:inputType="text"
-            android:paddingLeft="20dp"
+            android:paddingLeft="10dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp"
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/rphone"
+            android:layout_width="250dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/rname"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
-            />
-
-        <EditText
-            android:id="@+id/phone"
-            android:layout_width="200dp"
-            android:layout_height="30dp"
-            android:layout_centerHorizontal="true"
             android:background="@layout/txtedit_border"
-            android:hint="Phone"
+            android:hint="Phone no."
             android:inputType="text"
-            android:paddingLeft="20dp"
+            android:paddingLeft="10dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp"
-            android:layout_below="@id/fName"
-            android:layout_marginBottom="10dp"/>
+            android:textSize="15sp" />
 
         <EditText
-            android:id="@+id/gender"
-            android:layout_width="200dp"
+            android:id="@+id/rgen"
+            android:layout_width="250dp"
             android:layout_height="30dp"
+            android:layout_below="@id/rphone"
             android:layout_centerHorizontal="true"
-            android:layout_below="@id/phone"
+            android:layout_marginBottom="10dp"
             android:background="@layout/txtedit_border"
             android:hint="Gender"
             android:inputType="text"
-            android:paddingLeft="20dp"
+            android:paddingLeft="10dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp"
-            android:layout_marginBottom="10dp"/>
+            android:textSize="15sp" />
 
         <EditText
-            android:id="@+id/qlf"
-            android:layout_width="200dp"
+            android:id="@+id/rpros"
+            android:layout_width="250dp"
             android:layout_height="30dp"
-            android:layout_below="@id/gender"
-            android:background="@layout/txtedit_border"
-            android:hint="Qualification"
+            android:layout_below="@id/rgen"
             android:layout_centerHorizontal="true"
-            android:inputType="text"
-            android:paddingLeft="20dp"
-            android:textColor="#fff"
-            android:textColorHint="#aaa"
-            android:textSize="15dp"
-            android:layout_marginBottom="10dp"/>
-
-        <EditText
-            android:id="@+id/address"
-            android:layout_width="200dp"
-            android:layout_height="30dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/qlf"
-            android:background="@layout/txtedit_border"
-            android:hint="Address"
-            android:inputType="text"
-            android:paddingLeft="20dp"
-            android:textColor="#fff"
-            android:textColorHint="#aaa"
-            android:textSize="15dp"
-            android:layout_marginBottom="10dp"/>
-
-        <EditText
-            android:id="@+id/pf"
-            android:layout_width="200dp"
-            android:layout_height="30dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/address"
+            android:layout_marginBottom="10dp"
             android:background="@layout/txtedit_border"
             android:hint="Profession"
             android:inputType="text"
-            android:paddingLeft="20dp"
+            android:paddingLeft="10dp"
             android:textColor="#fff"
             android:textColorHint="#aaa"
-            android:textSize="15dp"
-            android:layout_marginBottom="10dp"/>
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/rquals"
+            android:layout_width="250dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/rpros"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:background="@layout/txtedit_border"
+            android:hint="Qualification"
+            android:inputType="text"
+            android:paddingLeft="10dp"
+            android:textColor="#fff"
+            android:textColorHint="#aaa"
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/raddress"
+            android:layout_width="250dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/rquals"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="30dp"
+            android:background="@layout/txtedit_border"
+            android:hint="Address"
+            android:inputType="text"
+            android:paddingLeft="10dp"
+            android:textColor="#fff"
+            android:textColorHint="#aaa"
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/deletebtn"
             android:layout_width="200dp"
             android:layout_height="30dp"
             android:layout_centerHorizontal="true"
-            android:layout_below="@id/adbtn"
+            android:layout_below="@id/raddress"
             android:background="@layout/cancelbtn_border"
             android:text="DELETE"
             android:textAlignment="center"
             android:textColor="#ff0000"
             android:textSize="15dp" />
+
     </RelativeLayout>
     <!--<EditText
         android:id="@+id/rname"
