--- a/PoketBuddy/app/src/main/res/layout/activity_main.xml
+++ b/PoketBuddy/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,6 @@
     tools:context=".MainActivity"
     android:theme="@android:style/Theme.NoTitleBar"
     >
-    <!--
-    <LinearLayout
-        android:id="@+id/headerView"
-        android:layout_width="match_parent"
-        android:layout_height="39dp"
-        android:layout_alignParentTop="true"
-        android:scaleType="fitXY">
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/music"
-            android:scaleType="centerInside"
-            android:padding="10dp"/>
-    </LinearLayout>-->
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -33,7 +17,7 @@
         android:gravity="center_horizontal"
         android:layout_marginTop="40dp"
         >
-        <TextView
+        <!--<TextView
             android:id="@+id/hellotxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,15 +25,22 @@
             android:textColor="#fff"
             android:textSize="40dp"
             android:fontFamily="sans-serif"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"/>-->
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/color_logo"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/image"
+            android:transitionName="simple_activity_transition"
+            tools:ignore="UnusedAttribute"/>
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:clickable="true"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@drawable/main_image"
-            android:layout_margin="40dp"
-            android:id="@+id/image"
+            android:layout_margin="30dp"
           />
         <TextView
             android:layout_width="wrap_content"
