--- a/PoketBuddy/app/src/main/res/layout/activity_remove_friend.xml
+++ b/PoketBuddy/app/src/main/res/layout/activity_remove_friend.xml
@@ -72,7 +72,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/contentView">
+        android:layout_below="@id/contentView"
+        android:id="@+id/resultView">
         <EditText
             android:id="@+id/rname"
             android:layout_width="250dp"
